@@ -1,3 +1,8 @@
+2005-11-15  Vincent Noel  <vincent.noel@gmail.com>
+
+	* about.c (logview_about): Add documenters in the about
+	dialog. Update email address.
+
 2005-11-14  Vincent Noel  <vnoel@cox.net>
 
 	* userprefs.c (prefs_create_defaults): Add a few more default logs.
